Guide: fix admonitionblock overflow

--- a/sagan-client/src/css/guide.css
+++ b/sagan-client/src/css/guide.css
@@ -136,4 +136,5 @@ h2[id*=reveal].open:before {
     padding: 25px 20px;
     margin: 30px 0;
     width: auto;
+    overflow: auto;
 }
